2022-01-04  Nick Clifton  <nickc@redhat.com>

	PR 28716
	* dwarf.c (load_build_id_debug_file): Remove spurious printf.

2021-12-16  Nick Clifton  <nickc@redhat.com>

	PR 28697
	* dwarf.c (load_build_id_debug_file): New function.
	(try_build_id_prefix): New function.
	(check_for_and_load_links): Call load_build_id_debug_file.
	(debug_displays): Add entry for .note.gnu.build-id.
	* dwarf.h (enum dwarf_section_display_enum): Add
	note_gnu_build_id.
	* testsuite/binutils-all/debuginfod.exp (test_fetch_debuglink):
	Fix regexp for loads via debuglink section.

2021-12-03  Chenghua Xu  <xuchenghua@loongson.cn>

	* MAINTAINERS: Add myself and Zhensong Liu
	as the LoongArch maintainer.

2021-12-02  Nick Clifton  <nickc@redhat.com>

	PR 28645
	* dwarf.c (process_cu_tu_index): Add test for overruning section
	whilst processing slots.

2021-11-30  Roland McGrath  <mcgrathr@google.com>

	* doc/local.mk: Give each man page target its missing dependency on
	doc/$(am__dirstamp).

2021-11-30  Nick Clifton  <nickc@redhat.com>

	* dwarf.c (find_debug_info_for_offset): Use dwarf_vma type for
	offsets, sizes and ranges.
	(display_loc_list): Likewise.  Also use print_dwarf_vma to print
	the offset.
	(display_loclists_list): Likewise.
	(display_loc_list_dwo): Likewise.
	(display_debug_str): Likewise.
	(display_debug_aranges): Likewise.
	(display_debug_ranges_list): Likewise.
	(display_debug_rnglists_list): Likewise.
	(display_debug_ranges): Likewise.

2021-11-29  Nick Clifton  <nickc@redhat.com>

	PR 28632
	* strings.c (usage): Update desciption of -n option.
	* doc/binutils.texi: Likewise.

2021-11-24  Nick Clifton  <nickc@redhat.com>

	PR 28564
	* sysdump.c (getCHARS): Check for an out of bounds read.

2021-11-16  Fangrui Song  <maskray@google.com>

	* readelf.c (enum relocation_type): New.
	(slurp_relr_relocs): New.
	(dump_relocations): Change is_rela to rel_type.
	Dump RELR.
	(dynamic_relocations): Add DT_RELR.
	(process_relocs): Check SHT_RELR and DT_RELR.