@@ -1,3 +1,9 @@
+2022-01-06  Nick Clifton  <nickc@redhat.com>
+
+	PR 28718
+	* debug.c (debug_write_type): Allow for malicious recursion via
+	indirect debug types.
+
 2022-01-04  Nick Clifton  <nickc@redhat.com>
 
 	PR 28716
